--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -10,7 +10,7 @@
         }
 
         h1 > div {
-            text-align: left;
+            text-align: center;
         }
 
         div.buttons {
